[package]
name = "rpm-next"
version = "0.1.0"
edition = "2024"
description = "Universal Package Manager for Multi-ABI Redox OS"
authors = ["Redox OS Developers"]
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
flate2 = "1"
xz2 = "0.1"
zstd = "0.13"
sha2 = "0.10"

[features]
default = []
